--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<div class="col-md-12">
 				<p>Hoy es tu cumpleaños!</p>
 				<p>Sigue haciendo que las palabras</p>
-				<p>Las palabras sean como juegos de colores</p>
+				<p>sean como juegos de colores</p>
 				<p>que iluminan el cielo!</p>
 			
 			</div>
